<resources>
    <string name="app_name">Discover</string>
    <string name="discover">DISCOVER</string>
    <string name="discover_by_filters">Discover by filters</string>
    <string name="top_categories">Top Categories</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movie_genres">Movie Genres</string>
    <string name="show_genres">Show Genres</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="poster_image">Poster Image</string>
    <string name="navigate_to_previous_screen">Navigates to previos Screen</string>
    <string name="choose_a_search_filter">Choose a Search Filter</string>
    <string name="multi_search">Multi-Search</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="genres">Genres</string>
    <string name="keywords">Keywords</string>
    <string name="recommendations">Recommendation</string>
    <string name="similar">Similar</string>
    <string name="Reviews">Reviews</string>
    <string name="created_by">Created By</string>
    <string name="still_path">Still path</string>
    <string name="episodes">Episode</string>
    <string name="viewpager_image">viewpager_image</string>
    <string name="change_view">Change View</string>
    <string name="icon_person">Icon_person</string>
    <string name="review_link">review link</string>
    <string name="back">Back</string>
    <string name="movie_image">Movie image</string>
    <string name="tv_show_image">Tv Show Image</string>
    <string name="vote_average">Vote Average</string>
</resources>
