<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".firstScreen.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/discover"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/main_searchView"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/searchview_background"
                    android:transitionName="searchBox"
                    app:iconifiedByDefault="false"
                    app:queryHint="Search for Movie or TV show" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_discover_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:text="@string/discover_by_filters"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@android:color/white"
                android:textColorHighlight="@color/colorPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_top_categories"
                style="@style/MainScreenHeadingTextStyle"
                android:layout_marginTop="20dp"
                android:text="@string/top_categories" />

            <com.google.android.material.card.MaterialCardView

                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@drawable/searchview_background"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/main_movies_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/movie_image"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.8"
                        android:background="#66000000"
                        android:gravity="center"
                        android:text="@string/movies"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@drawable/searchview_background"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/main_shows_image"
                        android:contentDescription="@string/tv_show_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.8"
                        android:background="#66000000"
                        android:gravity="center"
                        android:text="@string/tv_shows"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/MainScreenHeadingTextStyle"
                android:text="@string/movie_genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_genres_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

            <TextView
                style="@style/MainScreenHeadingTextStyle"
                android:text="@string/show_genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_genres_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>