<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:id="@+id/season_coordinator"
    tools:context=".showsScreen.SeasonActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/season_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@android:color/white" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/season_poster"
                    android:layout_width="160dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:transitionName="poster"
                    android:layout_marginTop="10dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/season_tab_layout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@android:color/transparent"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/season_overview_heading"
                        style="@style/subHeadingText"
                        android:text="@string/overview"
                        android:layout_marginBottom="10dp"/>

                    <com.example.discover.util.ExpandableTextView
                        android:id="@+id/season_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp" />

                    <TextView
                        android:id="@+id/season_cast_heading"
                        style="@style/subHeadingText"
                        android:text="@string/cast" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/season_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp" />

                    <TextView
                        android:id="@+id/season_crew_heading"
                        style="@style/subHeadingText"
                        android:text="@string/crew" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/season_crew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp" />

                    <TextView
                        android:id="@+id/season_episode_heading"
                        style="@style/subHeadingText"
                        android:text="@string/episodes" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/season_episode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>