<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/show_detail_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/show_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/show_detail_collapsing"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:collapsedTitleTextAppearance="@style/collapsedTitleAppearance"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/show_detail_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:nestedScrollingEnabled="false"
                    android:scaleType="centerCrop" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/show_detail_tab_layout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/show_detail_frameLayout_title"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/show_detail_poster_card"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <ImageView
                            android:id="@+id/show_detail_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_media_placeholder"
                            android:transitionName="posterImage" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/show_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="2dp"
                        android:background="@android:color/black"
                        android:drawableStart="@drawable/ic_tmdb"
                        android:padding="7dp"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/show_detail_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show_detail_rating"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@id/show_detail_poster_card"
                        android:maxLines="2"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/show_detail_runtime"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show_detail_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/show_detail_poster_card"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/show_details_first_air_date"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show_detail_runtime"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/show_detail_poster_card"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/show_detail_details"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show_details_first_air_date"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/show_detail_poster_card"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/show_detail_language"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show_detail_details"
                        android:layout_alignBottom="@id/show_detail_poster_card"
                        android:layout_marginStart="5dp"
                        android:layout_toStartOf="@id/show_detail_rating"
                        android:layout_toEndOf="@id/show_detail_poster_card"
                        android:textColor="@android:color/white" />

                </RelativeLayout>
            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/show_detail_toolbar"
                style="@style/ToolbarStyle"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back"
                app:title="" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_detail_overview_heading"
                    style="@style/subHeadingText"
                    android:layout_marginBottom="10dp"
                    android:text="@string/overview" />

                <com.example.discover.util.ExpandableTextView
                    android:id="@+id/show_detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:defaultFocusHighlightEnabled="false" />

                <TextView
                    android:id="@+id/show_detail_created_by_heading"
                    style="@style/subHeadingText"
                    android:text="@string/created_by" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_createdBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_cast_heading"
                    style="@style/subHeadingText"
                    android:text="@string/cast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_crew_heading"
                    style="@style/subHeadingText"
                    android:text="@string/crew" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_crew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_seasons_heading"
                    style="@style/subHeadingText"
                    android:text="Seasons" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_season"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_genres_heading"
                    style="@style/subHeadingText"
                    android:text="@string/genres" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_genresList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_keyword_heading"
                    style="@style/subHeadingText"
                    android:text="@string/keywords" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_keywordsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_recommendation_heading"
                    style="@style/subHeadingText"
                    android:text="@string/recommendations" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_similar_heading"
                    style="@style/subHeadingText"
                    android:text="@string/similar" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_similarMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/show_detail_review_heading"
                    style="@style/subHeadingText"
                    android:text="@string/Reviews" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/show_detail_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->